# lhd027

./: .gitignore  README.md  debug-weather-chart-render-failure.md  index.html  package-lock.json  package.json  vite.config.ts
.dbg/: trae-debug-log-weather-chart-render-failure.ndjson  weather-chart-render-failure.env
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AlarmPanel.vue  CitySelector.vue  ClockDisplay.vue  DynamicThemeSettings.vue  FocusHeatmap.vue  FocusPanel.vue  FocusStats.vue  ForecastPanel.vue  SettingsPanel.vue  ThemeCustomizer.vue  ThemeMarket.vue  ThemeSelector.vue  WeatherCard.vue  WeatherChart.vue  WidgetContainer.vue  WidgetSettingsDialog.vue
src/components/widgets/: AlarmWidget.vue  CalendarWidget.vue  ClockWidget.vue  TodoWidget.vue  WeatherWidget.vue
src/constants/: index.ts  themes.ts
src/router/: index.ts
src/stores/: alarm.ts  app.ts  focus.ts  theme.ts  todo.ts  widget.ts
src/styles/: global.scss
src/types/: index.ts
src/views/: FloatWindow.vue  MainWindow.vue  WidgetLibrary.vue
