[package]
name = "weather-clock"
version = "1.0.0"
description = "A beautiful weather clock desktop application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "window-maximize", "window-set-always-on-top", "window-set-resizable", "window-start-dragging", "window-set-skip-taskbar", "window-set-size", "window-set-position", "window-hide", "window-unmaximize", "window-unminimize", "window-close", "window-show", "window-set-decorations", "window-minimize",
  "notification-all",
  "global-shortcut-all",
  "shell-open",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
